--- a/deliveries/.env
+++ b/deliveries/.env
@@ -5,6 +5,13 @@ DELIVERIES_DB_USERNAME=postgres
 DELIVERIES_DB_PASSWORD=admin
 DELIVERIES_DB_NAME=dominosdeliveriesdb
 
+# Test
+OrdersDbHost=localhost
+OrdersDbPort=5432
+OrdersDbUsername=postgres
+OrdersDbPassword=admin
+OrdersDbName=dominosdeliveriesdb_test
+
 # Logging
 LOGS_HOST=http://localhost
 LOGS_PORT=8081
