--- a/deliveries/iaas/docker/Dockerfile
+++ b/deliveries/iaas/docker/Dockerfile
@@ -6,7 +6,7 @@ RUN make build
 
 FROM alpine
 WORKDIR /app
-COPY --from=build /app/build/bin/api-rest-con-master-mold /app
+COPY --from=build /app/build/bin/deliveries /app
 
 
-ENTRYPOINT [ "/app/api-rest-con-master-mold" ][]
+ENTRYPOINT [ "/app/deliveries" ][]
