--- a/deliveries/iaas/kubernetes/deployment.yaml
+++ b/deliveries/iaas/kubernetes/deployment.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/name: api-rest-con-master-mold
+    app.kubernetes.io/name: deliveries
     app.kubernetes.io/version: "1.0.0"
     app.kubernetes.io/component: api-layer
     app.kubernetes.io/part-of: restructuraciones
     app.kubernetes.io/managed-by: gitlab-ci
     app.kubernetes.io/country: chile
-  name: api-rest-con-master-mold-svc
+  name: deliveries-svc
 spec:
   ports:
     - name: http
@@ -16,7 +16,7 @@ spec:
       protocol: TCP
       targetPort: 8080
   selector:
-    app.kubernetes.io/name: api-rest-con-master-mold
+    app.kubernetes.io/name: deliveries
     app.kubernetes.io/version: "1.0.0"
     app.kubernetes.io/component: api-layer
     app.kubernetes.io/part-of: restructuraciones
@@ -26,12 +26,12 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  api-rest-con-master-mold-deploy
+  name:  deliveries-deploy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: api-rest-con-master-mold
+      app.kubernetes.io/name: deliveries
       app.kubernetes.io/version: "1.0.0"
       app.kubernetes.io/component: api-layer
       app.kubernetes.io/part-of: restructuraciones
@@ -40,7 +40,7 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: api-rest-con-master-mold
+        app.kubernetes.io/name: deliveries
         app.kubernetes.io/version: "1.0.0"
         app.kubernetes.io/component: api-layer
         app.kubernetes.io/part-of: restructuraciones
@@ -50,12 +50,12 @@ spec:
       imagePullSecrets:
         - name: regcred
       containers:
-        - name:  api-rest-con-master-mold
-          image: hub.fif.tech/integracion-api/bfcl/api-rest-con-master-mold:v0.0.1
+        - name:  deliveries
+          image: hub.fif.tech/integracion-api/bfcl/deliveries:v0.0.1
           imagePullPolicy: Always
           envFrom:
             - configMapRef:
-                name:  api-rest-con-master-mold-cfg
+                name:  deliveries-cfg
           resources:
             limits:
               memory: "50Mi"
